# adventOfCode

./: .gitignore  README.md  go.mod
2020/01/: main.go
2020/02/: main.go
2020/03/: main.go
2020/04/: main.go
2020/05/: main.go
2020/06/: main.go
2020/07/: main.go
2020/08/: main.go
2020/09/: main.go
2020/10/: main.go
2020/11/: main.go
2020/12/: main.go
2020/13/: main.go
2020/14/: main.go
2020/15/: main.go
2020/16/: main.go
2020/17/: main.go
2020/18/: main.go
2020/19/: main.go
2020/20/: main.go
2020/21/: main.go
2020/22/: main.go
2020/23/: main.go
2020/24/: main.go
2020/25/: main.go
2021/01/: main.go
2021/02/: main.go  type.go
2021/03/: main.go
2021/04/: main.go  type.go
2021/05/: grid.go  main.go  move.go  position.go  type.go
2021/06/: main.go
2021/07/: main.go
2021/08/: main.go
2021/09/: main.go
aoc-2022/: Cargo.toml  Makefile
aoc-2022/input/: 05-real  test.txt
aoc-2022/src/: lib.rs  main.rs
aoc-2022/src/resolver/: challenge.rs  mod.rs  resolver.rs
aoc-2022/src/resolver/day/: mod.rs  one.rs  r01.rs  r02.rs  r03.rs  r04.rs  r05.rs  r06.rs  r07.rs  r08.rs  r09.rs  r10.rs  r11.rs  two.rs
input/2020/: 13-test-2
pkg/utils/: input.go  load.go  math.go  slice.go  string.go  vector.go
