[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={ version = "4.0.26", features = ["derive"] }
itertools={version = "0.10.5"}
rand={version = "0.8.5"}
rayon={version = "1.6.0"}
array_tool={version = "1.0.3"}
regex={version = "1.7.0"}
lazy_static={version = "1.4.0"}